@startuml characters

class Scene{
    main()
}

class Geezer{
    Geezer theGeezer
    getTheGeezer()
    Sorter sorter
    setSorter()
    lineup()
    parsePlan()
   execute()
}

interface Linable{
    setPosition()
    getPosition()
    getValue()
}

enum Gourd{
    int r,g,b
    Position position
    getGourdByRank()
    rank()
    toString()
    swapPosition()
}

interface Sorter{
    load()
    sort()
    getPlan()
}

class BubbleSorter{
    int[] a
    swap()
    String plan
}

class Line {
    Position[] positions
    put()
    get()
    toString()
    toArray
}

class Position{
    Linable linable
    setLinable()
}


Sorter --|>BubbleSorter

Linable --|> Gourd

Line *-- Position

Gourd o-- Position

Sorter --o Geezer

@enduml